--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1-1.20.1
 maven_group=fr.beluga_curieux.apprentissage
 archives_base_name=apprentissage
 
